--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prepublishOnly": "yarn build && yarn test",
     "build": "rimraf dist && tsc",
-    "test": "cross-env TS_NODE_PROJECT=tsconfig.test.json NODE_OPTIONS='--loader ts-node/esm' c8 --reporter=lcov mocha 'tests/**/*.ts'"
+    "test": "TS_NODE_PROJECT=tsconfig.test.json NODE_OPTIONS='--loader ts-node/esm' c8 --reporter=lcov mocha 'tests/**/*.ts'"
   },
   "repository": "git@github.com:zjffun/stringify-json-script-content.git",
   "author": "Jufeng Zhang <zjffun@gmail.com>",
@@ -18,7 +18,6 @@
     "c8": "^7.12.0",
     "chai": "^4.3.6",
     "codecov": "^3.8.3",
-    "cross-env": "^7.0.3",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
