--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prepublishOnly": "yarn build && yarn test",
     "build": "rimraf dist && tsc",
